# ecs

./: .gitignore  CMakeLists.txt  README.md
example/src/: main.cpp
include/ecs/: ecs.h
src/: ecs.cpp  pool.h  scene.h  scope.h
src/ecs/: ecs.cpp  scene.h
src/examples/: main.cpp
